--- a/html/index.html
+++ b/html/index.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
     <head>
-        <meta
-            http-equiv="refresh"
-            content="0; url=/20-work-n-study/dnd/iostria"
-        />
+        <script type="text/javascript">
+            window.location.href = "/20-work-n-study/dnd/iostria";
+        </script>
+
         <title>Iostria</title>
     </head>
     <body></body>
