--- a/html/index.html
+++ b/html/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <script type="text/javascript">
-            window.location.href = "/20-work-n-study/dnd/iostria";
+            window.location.href = "/20-work-n-study/dnd/iostria/iostria.html";
         </script>
 
         <title>Iostria</title>
