--- a/html/index.html
+++ b/html/index.html
@@ -4,7 +4,12 @@
         <script type="text/javascript">
             window.location.href = "/20-work-n-study/dnd/iostria/iostria.html";
         </script>
-
+        <meta
+            http-equiv="Cache-Control"
+            content="no-cache, no-store, must-revalidate"
+        />
+        <meta http-equiv="Pragma" content="no-cache" />
+        <meta http-equiv="Expires" content="0" />
         <title>Iostria</title>
     </head>
     <body>
