--- a/html/index.html
+++ b/html/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
     <head>
         <script type="text/javascript">
-            window.location.href = "/20-work-n-study/dnd/iostria/iostria.html";
+            window.location.href =
+                "/20-work-n-study/dnd/iostria/iostria.html#Iostria";
         </script>
         <meta
             http-equiv="Cache-Control"
