--- a/html/index.html
+++ b/html/index.html
@@ -3,7 +3,7 @@
     <head>
         <script type="text/javascript">
             window.location.href =
-                "20 - Work n Study/DnD/Iostria/Iostria.html#Iostria";
+                "20-work-n-study/dnd/iostria/iostria.html#Iostria";
         </script>
         <meta
             http-equiv="Cache-Control"
